@@ -1,4 +1,8 @@
-Tue Sep 17 15:52:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Tue Sep 17 15:53:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert_throw):
+	  assertion for throw.  MiniTest::Assertions#assert_throws discards
+	  the cautht value.
 
 	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert_nothing_thrown):
 	  returns the result of the given block.
